# instagram-clone

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
posts/: admin.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/templates/posts/: base.html  post_create.html  post_detail.html  post_list.html
static/posts/css/: mystyle.sass
