[tool.poetry]
name = "pygram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
Django = "3.1.0"
django-environ = "0.4.5"
Pillow = "8.0.1"
psycopg2-binary = "2.8.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
